# apple-platforms

./: Cargo.toml  README.md
.github/workflows/: ci.yml
examples/: all.rs  platform.rs  sdk.rs  triple.rs
src/: lib.rs  triple.rs
